--- a/lib/package.json
+++ b/lib/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "amdefine": "1.0.0",
     "apollo-client": "^0.5.25",
+    "apollo-server": "^0.3.3",
     "autoprefixer": "^6.3.1",
     "ava": "^0.15.2",
     "aws-sdk": "^2.6.13",
@@ -12,19 +13,26 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-3": "^6.17.0",
+    "body-parser": "^1.15.2",
     "brfs": "1.4.1",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "cors": "^2.8.1",
     "css-loader": "^0.23.1",
     "chroma-js": "^1.2.1",
     "classnames": "2.2.5",
     "common-tags": "^1.3.1",
     "es6-promise": "^3.2.1",
     "exports-loader": "^0.6.3",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.8.5",
     "highlight.js": "9.8.0",
+    "graphql": "^0.8.2",
     "graphql-tag": "1.1.2",
+    "graphql-tools": "^0.8.4",
+    "mongodb": "^2.2.10",
+    "mongoose": "^4.7.5",
     "imports-loader": "^0.6.5",
     "json-loader": "0.5.4",
     "json-stable-stringify": "^1.0.1",
