--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -9,8 +9,11 @@ Flask-Principal==0.4.0
 Flask-Script==2.0.5
 Flask-Security==1.7.3
 flask_socketio==2.1.0
+flask_graphql==1.4.0
 Flask-WTF==0.10.0
 google-api-python-client==1.1
+gql==0.1.0
+graphene==1.1.3
 gunicorn==19.4.5
 hyperopt==0.0.2
 inflect==0.2.5
