--- a/lib/package.json
+++ b/lib/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-3": "^6.17.0",
     "body-parser": "^1.15.2",
+    "bower": "^1.8.0",
     "brfs": "1.4.1",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
@@ -31,6 +32,7 @@
     "graphql": "^0.8.2",
     "graphql-tag": "1.1.2",
     "graphql-tools": "^0.8.4",
+    "gulp": "^3.9.1",
     "mongodb": "^2.2.10",
     "mongoose": "^4.7.5",
     "imports-loader": "^0.6.5",
