--- a/lib/package.json
+++ b/lib/package.json
@@ -36,6 +36,7 @@
     "mongodb": "^2.2.10",
     "mongoose": "^4.7.5",
     "imports-loader": "^0.6.5",
+    "jest": "18.1.0",
     "json-loader": "0.5.4",
     "json-stable-stringify": "^1.0.1",
     "less": "2.7.1",
