--- a/lib/package.json
+++ b/lib/package.json
@@ -13,9 +13,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-3": "^6.17.0",
+    "babel-preset-latest": "6.22.0",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
     "brfs": "1.4.1",
+    "classnames": "2.2.5",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "cors": "^2.8.1",
@@ -28,12 +30,14 @@
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "extract-zip": "^1.5.0",
     "file-loader": "0.8.5",
     "highlight.js": "9.8.0",
     "graphql": "^0.8.2",
     "graphql-tag": "1.1.2",
     "graphql-tools": "^0.8.4",
     "gulp": "^3.9.1",
+    "gzip-size": "^3.0.0",
     "mongodb": "^2.2.10",
     "mongoose": "^4.7.5",
     "imports-loader": "^0.6.5",
