--- a/lib/package.json
+++ b/lib/package.json
@@ -26,6 +26,7 @@
     "classnames": "2.2.5",
     "common-tags": "^1.3.1",
     "d3": "^4.4.4",
+    "d3-force": "^"
     "es6-promise": "^3.2.1",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
