--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -1,6 +1,9 @@
 arrow==0.6.0
+awscli==1.11.45
+boto==2.41.0
 boto3==1.4.1
 bson==0.4.3
+docker-py==1.4.0
 eventlet==0.18.4
 Flask==0.11.1
 Flask-Admin==1.0.8
