--- a/lib/package.json
+++ b/lib/package.json
@@ -8,6 +8,7 @@
     "ava": "^0.15.2",
     "aws-sdk": "^2.6.13",
     "babel-cli": "^6.10.1",
+    "babel-core": "^6.0.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.6.0",
@@ -20,13 +21,14 @@
     "classnames": "2.2.5",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "concurrently": "^3.1.0",
     "cors": "^2.8.1",
     "css-loader": "^0.23.1",
     "chroma-js": "^1.2.1",
     "classnames": "2.2.5",
     "common-tags": "^1.3.1",
     "d3": "^4.4.4",
-    "d3-force": "^"
+    "ejs": "^1.0.0",
     "es6-promise": "^3.2.1",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
@@ -45,14 +47,19 @@
     "jest": "18.1.0",
     "json-loader": "0.5.4",
     "json-stable-stringify": "^1.0.1",
+    "jsonwebtoken": "^7.1.9",
     "less": "2.7.1",
     "lodash.assign": "^4.2.0",
     "lodash.includes": "^4.3.0",
     "lodash.merge": "^4.2.0",
     "lodash.throttle": "^4.1.1",
     "mkdirp": "^0.5.1",
+    "mongoose": "^4.1.9",
     "nodemon": "^1.11.0",
     "node-sass": "^4.1.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "pluralize": "^3.0.0",
     "postcss-loader": "0.9.1",
     "react": "15.0.2",
