--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -11,7 +11,7 @@ Flask-Login==0.2.11
 Flask-Principal==0.4.0
 Flask-Script==2.0.5
 Flask-Security==1.7.3
-flask_socketio==2.1.0
+flask-socketio==2.8.2
 flask_graphql==1.4.0
 Flask-WTF==0.10.0
 google-api-python-client==1.1
