added express-session shortid

--- a/lib/package.json
+++ b/lib/package.json
@@ -32,6 +32,7 @@
     "es6-promise": "^3.2.1",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "extract-zip": "^1.5.0",
     "file-loader": "0.8.5",
@@ -54,6 +55,7 @@
     "lodash.merge": "^4.2.0",
     "lodash.throttle": "^4.1.1",
     "mkdirp": "^0.5.1",
+    "mongodb": "^2.2.11",
     "mongoose": "^4.1.9",
     "nodemon": "^1.11.0",
     "node-sass": "^4.1.0",
@@ -74,6 +76,7 @@
     "redux-saga": "^0.10.4",
     "reselect": "^2.5.1",
     "sass-loader": "^3.1.2",
+    "shortid": "^2.2.6",
     "smoothscroll-polyfill": "^0.3.4",
     "standard": "^7.0.1",
     "style-loader": "^0.13.0",
