--- a/lib/package.json
+++ b/lib/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-preset-latest": "6.22.0",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
     "brfs": "1.4.1",
