--- a/lib/package.json
+++ b/lib/package.json
@@ -12,22 +12,21 @@
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-latest": "6.22.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-3": "^6.17.0",
-    "babel-preset-latest": "6.22.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
     "brfs": "1.4.1",
+    "chroma-js": "^1.2.1",
     "classnames": "2.2.5",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "common-tags": "^1.3.1",
     "concurrently": "^3.1.0",
     "cors": "^2.8.1",
     "css-loader": "^0.23.1",
-    "chroma-js": "^1.2.1",
-    "classnames": "2.2.5",
-    "common-tags": "^1.3.1",
     "d3": "^4.4.4",
     "ejs": "^1.0.0",
     "es6-promise": "^3.2.1",
@@ -37,14 +36,12 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "extract-zip": "^1.5.0",
     "file-loader": "0.8.5",
-    "highlight.js": "9.8.0",
     "graphql": "^0.8.2",
     "graphql-tag": "1.1.2",
     "graphql-tools": "^0.8.4",
     "gulp": "^3.9.1",
     "gzip-size": "^3.0.0",
-    "mongodb": "^2.2.10",
-    "mongoose": "^4.7.5",
+    "highlight.js": "9.8.0",
     "imports-loader": "^0.6.5",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
@@ -58,8 +55,8 @@
     "mkdirp": "^0.5.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.1.9",
-    "nodemon": "^1.11.0",
     "node-sass": "^4.1.0",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
@@ -74,6 +71,7 @@
     "react-router": "^2.4.0",
     "rebass": "^0.2.6",
     "redux": "^3.5.2",
+    "redux-responsive": "^4.1.1",
     "redux-saga": "^0.10.4",
     "reselect": "^2.5.1",
     "sass-loader": "^3.1.2",
