--- a/lib/package.json
+++ b/lib/package.json
@@ -25,6 +25,7 @@
     "commander": "^2.9.0",
     "common-tags": "^1.3.1",
     "concurrently": "^3.1.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.1",
     "css-loader": "^0.23.1",
     "d3": "^4.4.4",
