--- a/lib/package.json
+++ b/lib/package.json
@@ -26,6 +26,7 @@
     "common-tags": "^1.3.1",
     "concurrently": "^3.1.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
     "css-loader": "^0.23.1",
     "d3": "^4.4.4",
@@ -42,6 +43,7 @@
     "graphql-tools": "^0.8.4",
     "gulp": "^3.9.1",
     "gzip-size": "^3.0.0",
+    "helmet": "^3.4.1",
     "highlight.js": "9.8.0",
     "imports-loader": "^0.6.5",
     "jest": "18.1.0",
