--- a/lib/package.json
+++ b/lib/package.json
@@ -26,6 +26,7 @@
     "common-tags": "^1.3.1",
     "concurrently": "^3.1.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
     "css-loader": "^0.23.1",
