--- a/lib/package.json
+++ b/lib/package.json
@@ -59,6 +59,7 @@
     "mkdirp": "^0.5.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.1.9",
+    "morgan": "^1.8.1",
     "node-sass": "^4.1.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
@@ -90,7 +91,9 @@
     "url-loader": "0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "winston": "^2.3.1",
+    "winston-logstash": "^0.3.0"
   },
   "version": "0.0.1"
 }
