--- a/lib/package.json
+++ b/lib/package.json
@@ -60,7 +60,9 @@
     "mongodb": "^2.2.11",
     "mongoose": "^4.1.9",
     "morgan": "^1.8.1",
+    "mysql": "^2.13.0",
     "node-sass": "^4.1.0",
+    "nodemailer": "^3.1.4",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
