--- a/lib/package.json
+++ b/lib/package.json
@@ -61,6 +61,7 @@
     "mongoose": "^4.1.9",
     "morgan": "^1.8.1",
     "mysql": "^2.13.0",
+    "node-fetch": "^1.6.3",
     "node-sass": "^4.1.0",
     "nodemailer": "^3.1.4",
     "nodemon": "^1.11.0",
