--- a/lib/package.json
+++ b/lib/package.json
@@ -5,7 +5,7 @@
     "apollo-client": "^0.5.25",
     "apollo-server": "^0.3.3",
     "autoprefixer": "^6.3.1",
-    "ava": "^0.15.2",
+    "ava": "^0.18.2",
     "aws-sdk": "^2.6.13",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.0.0",
@@ -32,6 +32,7 @@
     "css-loader": "^0.23.1",
     "d3": "^4.4.4",
     "ejs": "^1.0.0",
+    "entitiex": "latest",
     "es6-promise": "^3.2.1",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
@@ -39,6 +40,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "extract-zip": "^1.5.0",
     "file-loader": "0.8.5",
+    "filtex": "latest",
     "graphql": "^0.8.2",
     "graphql-tag": "1.1.2",
     "graphql-tools": "^0.8.4",
@@ -91,6 +93,8 @@
     "stylelint": "^7.7.0",
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
+    "transactionx-client": "latest",
+    "transactionx-express": "latest",
     "url-loader": "0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
