--- a/lib/package.json
+++ b/lib/package.json
@@ -49,6 +49,7 @@
     "helmet": "^3.4.1",
     "highlight.js": "9.8.0",
     "imports-loader": "^0.6.5",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
     "json-stable-stringify": "^1.0.1",
