--- a/lib/package.json
+++ b/lib/package.json
@@ -24,6 +24,7 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "common-tags": "^1.3.1",
+    "compression": "^1.6.2",
     "concurrently": "^3.1.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
