--- a/lib/package.json
+++ b/lib/package.json
@@ -104,5 +104,8 @@
     "winston": "^2.3.1",
     "winston-logstash": "^0.3.0"
   },
+  "scripts": {
+    "preinstall": "sh ../scripts/symlink.sh"
+  },
   "version": "0.0.1"
 }
