--- a/lib/package.json
+++ b/lib/package.json
@@ -56,8 +56,10 @@
     "json-stable-stringify": "^1.0.1",
     "jsonwebtoken": "^7.1.9",
     "less": "2.7.1",
+    "lodash": "^4.17.4",
     "lodash.assign": "^4.2.0",
     "lodash.includes": "^4.3.0",
+    "lodash.keyby": "^4.6.0",
     "lodash.merge": "^4.2.0",
     "lodash.throttle": "^4.1.1",
     "mkdirp": "^0.5.1",
