--- a/lib/package.json
+++ b/lib/package.json
@@ -7,14 +7,12 @@
     "autoprefixer": "^6.3.1",
     "ava": "^0.18.2",
     "aws-sdk": "^2.6.13",
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.0.0",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-latest": "6.22.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-3": "^6.17.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
@@ -34,7 +32,7 @@
     "d3": "^4.4.4",
     "ejs": "^1.0.0",
     "entitiex": "latest",
-    "es6-promise": "^3.2.1",
+    "es6-promise": "^4.1.0",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
