--- a/lib/package.json
+++ b/lib/package.json
@@ -60,6 +60,7 @@
     "lodash.keyby": "^4.6.0",
     "lodash.merge": "^4.2.0",
     "lodash.throttle": "^4.1.1",
+    "lodash.values": "^4.3.0",
     "mkdirp": "^0.5.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.1.9",
