--- a/lib/package.json
+++ b/lib/package.json
@@ -56,6 +56,7 @@
     "less": "2.7.1",
     "lodash": "^4.17.4",
     "lodash.assign": "^4.2.0",
+    "lodash.flatten": "^4.4.0",
     "lodash.includes": "^4.3.0",
     "lodash.keyby": "^4.6.0",
     "lodash.merge": "^4.2.0",
