--- a/lib/package.json
+++ b/lib/package.json
@@ -62,6 +62,7 @@
     "lodash.merge": "^4.2.0",
     "lodash.range": "^3.2.0",
     "lodash.throttle": "^4.1.1",
+    "lodash.uniqby": "^4.7.0",
     "lodash.values": "^4.3.0",
     "mkdirp": "^0.5.1",
     "mongodb": "^2.2.11",
