--- a/lib/package.json
+++ b/lib/package.json
@@ -61,6 +61,7 @@
     "lodash.keyby": "^4.6.0",
     "lodash.merge": "^4.2.0",
     "lodash.range": "^3.2.0",
+    "lodash.sample": "^4.2.1",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "lodash.values": "^4.3.0",
@@ -69,6 +70,7 @@
     "mongoose": "^4.1.9",
     "morgan": "^1.8.1",
     "mysql": "^2.13.0",
+    "node-env-file": "^0.1.8",
     "node-fetch": "^1.6.3",
     "node-sass": "^4.1.0",
     "nodemailer": "^3.1.4",
