--- a/lib/package.json
+++ b/lib/package.json
@@ -50,6 +50,7 @@
     "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.1",
     "jest": "18.1.0",
+    "jsdom": "^9.12.0",
     "json-loader": "0.5.4",
     "json-stable-stringify": "^1.0.1",
     "jsonwebtoken": "^7.1.9",
