--- a/lib/package.json
+++ b/lib/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.1",
     "css-loader": "^0.23.1",
     "d3": "^4.4.4",
+    "draft-js": "^0.10.0",
     "ejs": "^1.0.0",
     "entitiex": "latest",
     "es6-promise": "^4.1.0",
@@ -59,8 +60,11 @@
     "lodash.assign": "^4.2.0",
     "lodash.flatten": "^4.4.0",
     "lodash.includes": "^4.3.0",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.keyby": "^4.6.0",
-    "lodash.merge": "^4.2.0",
+    "lodash.merge": "^4.6.0",
+    "lodash.mergewith": "^4.6.0",
     "lodash.range": "^3.2.0",
     "lodash.sample": "^4.2.1",
     "lodash.throttle": "^4.1.1",
@@ -79,8 +83,10 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "pluralize": "^3.0.0",
     "postcss-loader": "0.9.1",
+    "protractor": "^5.1.1",
     "react": "15.0.2",
     "react-apollo": "^0.7.2",
     "react-dom": "15.0.2",
@@ -95,6 +101,7 @@
     "redux-saga": "^0.10.4",
     "reselect": "^2.5.1",
     "sass-loader": "^3.1.2",
+    "selenium-webdriver": "^3.3.0",
     "shortid": "^2.2.6",
     "smoothscroll-polyfill": "^0.3.4",
     "standard": "^7.0.1",
@@ -102,11 +109,15 @@
     "stylelint": "^7.7.0",
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
-    "transactionx-client": "latest",
-    "transactionx-express": "latest",
+    "transactions-express": "latest",
+    "transactions-express-mongodb": "latest",
+    "transactions-redux-normalizer": "latest",
+    "transactions-redux-reselector": "latest",
+    "transactions-redux-saga": "latest",
     "url-loader": "0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
+    "webpage": "^0.3.0",
     "whatwg-fetch": "^1.0.0",
     "winston": "^2.3.1",
     "winston-logstash": "^0.3.0"
