--- a/lib/package.json
+++ b/lib/package.json
@@ -118,6 +118,7 @@
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpage": "^0.3.0",
+    "webshot": "^0.18.0",
     "whatwg-fetch": "^1.0.0",
     "winston": "^2.3.1",
     "winston-logstash": "^0.3.0"
