--- a/lib/package.json
+++ b/lib/package.json
@@ -104,6 +104,8 @@
     "selenium-webdriver": "^3.3.0",
     "shortid": "^2.2.6",
     "smoothscroll-polyfill": "^0.3.4",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "standard": "^7.0.1",
     "style-loader": "^0.13.0",
     "stylelint": "^7.7.0",
