--- a/lib/package.json
+++ b/lib/package.json
@@ -3,7 +3,6 @@
   "dependencies": {
     "amdefine": "1.0.0",
     "apollo-client": "^0.5.25",
-    "apollo-server": "^0.3.3",
     "autoprefixer": "^6.3.1",
     "ava": "^0.18.2",
     "aws-sdk": "^2.6.13",
@@ -42,6 +41,7 @@
     "file-loader": "0.8.5",
     "filtex": "latest",
     "graphql": "^0.8.2",
+    "graphql-server": "^0.3.2",
     "graphql-tag": "1.1.2",
     "graphql-tools": "^0.8.4",
     "gulp": "^3.9.1",
@@ -60,7 +60,6 @@
     "lodash.assign": "^4.2.0",
     "lodash.flatten": "^4.4.0",
     "lodash.includes": "^4.3.0",
-    "lodash.isarray": "^4.0.0",
     "lodash.isequal": "^4.5.0",
     "lodash.keyby": "^4.6.0",
     "lodash.merge": "^4.6.0",
@@ -86,10 +85,11 @@
     "phantomjs-prebuilt": "^2.1.14",
     "pluralize": "^3.0.0",
     "postcss-loader": "0.9.1",
+    "prop-types": "^15.5.4",
     "protractor": "^5.1.1",
-    "react": "15.0.2",
+    "react": "15.5.3",
     "react-apollo": "^0.7.2",
-    "react-dom": "15.0.2",
+    "react-dom": "15.5.3",
     "react-helmet": "^3.1.0",
     "react-hot-loader": "^3.0.0-beta.1",
     "react-redux": "^4.4.5",
@@ -111,8 +111,8 @@
     "stylelint": "^7.7.0",
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
-    "transactions-express": "latest",
-    "transactions-express-mongodb": "latest",
+    "transactions-express-rest": "latest",
+    "transactions-express-rest-mongodb": "latest",
     "transactions-redux-normalizer": "latest",
     "transactions-redux-reselector": "latest",
     "transactions-redux-saga": "latest",
