--- a/lib/package.json
+++ b/lib/package.json
@@ -48,6 +48,8 @@
     "gzip-size": "^3.0.0",
     "helmet": "^3.4.1",
     "highlight.js": "9.8.0",
+    "history": "^4.6.1",
+    "immutable": "^3.8.1",
     "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.1",
     "jest": "18.1.0",
@@ -87,13 +89,15 @@
     "postcss-loader": "0.9.1",
     "prop-types": "^15.5.4",
     "protractor": "^5.1.1",
-    "react": "15.5.3",
+    "react": "15.4.2",
     "react-apollo": "^0.7.2",
-    "react-dom": "15.5.3",
+    "react-dom": "15.4.2",
     "react-helmet": "^3.1.0",
     "react-hot-loader": "^3.0.0-beta.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.4.0",
+    "react-redux": "^5.0.3",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "next",
     "react-toggle": "^3.0.1",
     "rebass": "^0.2.6",
     "redux": "^3.5.2",
