--- a/lib/package.json
+++ b/lib/package.json
@@ -68,6 +68,7 @@
     "lodash.mergewith": "^4.6.0",
     "lodash.range": "^3.2.0",
     "lodash.sample": "^4.2.1",
+    "lodash.startcase": "^4.4.0",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "lodash.values": "^4.3.0",
@@ -98,6 +99,7 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "next",
+    "react-throttle": "^0.3.0",
     "react-toggle": "^3.0.1",
     "rebass": "^0.2.6",
     "redux": "^3.5.2",
