--- a/lib/package.json
+++ b/lib/package.json
@@ -92,6 +92,7 @@
     "protractor": "^5.1.1",
     "react": "15.4.2",
     "react-apollo": "^0.7.2",
+    "react-debounce-input": "^3.0.0",
     "react-dom": "15.4.2",
     "react-helmet": "^3.1.0",
     "react-hot-loader": "^3.0.0-beta.1",
@@ -99,7 +100,6 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "next",
-    "react-throttle": "^0.3.0",
     "react-toggle": "^3.0.1",
     "rebass": "^0.2.6",
     "redux": "^3.5.2",
