--- a/lib/package.json
+++ b/lib/package.json
@@ -94,6 +94,7 @@
     "react-apollo": "^0.7.2",
     "react-debounce-input": "^3.0.0",
     "react-dom": "15.4.2",
+    "react-dropzone": "^3.13.1",
     "react-helmet": "^3.1.0",
     "react-hot-loader": "^3.0.0-beta.1",
     "react-redux": "^5.0.3",
