--- a/lib/package.json
+++ b/lib/package.json
@@ -72,10 +72,12 @@
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "lodash.values": "^4.3.0",
+    "mime-types": "^2.1.15",
     "mkdirp": "^0.5.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.1.9",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "node-env-file": "^0.1.8",
     "node-fetch": "^1.6.3",
