added nltk and het lodash

--- a/lib/package.json
+++ b/lib/package.json
@@ -61,6 +61,7 @@
     "lodash": "^4.17.4",
     "lodash.assign": "^4.2.0",
     "lodash.flatten": "^4.4.0",
+    "lodash.get": "^4.4.2",
     "lodash.includes": "^4.3.0",
     "lodash.isequal": "^4.5.0",
     "lodash.keyby": "^4.6.0",
@@ -99,6 +100,7 @@
     "react-dropzone": "^3.13.1",
     "react-helmet": "^3.1.0",
     "react-hot-loader": "^3.0.0-beta.1",
+    "react-portal-tooltip": "^1.1.5",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
@@ -126,6 +128,7 @@
     "transactions-redux-reselector": "latest",
     "transactions-redux-saga": "latest",
     "url-loader": "0.5.7",
+    "url-slug": "^2.0.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpage": "^0.3.0",
