--- a/lib/package.json
+++ b/lib/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^0.23.1",
     "d3": "^4.4.4",
     "draft-js": "^0.10.0",
+    "draft-js-mathjax-plugin": "^1.3.4",
     "ejs": "^1.0.0",
     "entitiex": "latest",
     "es6-promise": "^4.1.0",
