--- a/lib/package.json
+++ b/lib/package.json
@@ -2,16 +2,16 @@
   "name": "catapultenv",
   "dependencies": {
     "amdefine": "1.0.0",
-    "apollo-client": "^0.5.25",
     "autoprefixer": "^6.3.1",
     "ava": "^0.18.2",
     "aws-sdk": "^2.6.13",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-latest": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
@@ -30,7 +30,13 @@
     "css-loader": "^0.23.1",
     "d3": "^4.4.4",
     "draft-js": "^0.10.0",
+    "draft-js-alignment-plugin": "beta",
+    "draft-js-drag-n-drop-plugin": "beta",
+    "draft-js-focus-plugin": "beta",
+    "draft-js-image-plugin": "beta",
     "draft-js-mathjax-plugin": "^1.3.4",
+    "draft-js-plugins-editor": "beta",
+    "draft-js-resizeable-plugin": "beta",
     "ejs": "^1.0.0",
     "entitiex": "latest",
     "es6-promise": "^4.1.0",
@@ -41,10 +47,6 @@
     "extract-zip": "^1.5.0",
     "file-loader": "0.8.5",
     "filtex": "latest",
-    "graphql": "^0.8.2",
-    "graphql-server": "^0.3.2",
-    "graphql-tag": "1.1.2",
-    "graphql-tools": "^0.8.4",
     "gulp": "^3.9.1",
     "gzip-size": "^3.0.0",
     "helmet": "^3.4.1",
@@ -94,23 +96,22 @@
     "postcss-loader": "0.9.1",
     "prop-types": "^15.5.4",
     "protractor": "^5.1.1",
-    "react": "15.4.2",
-    "react-apollo": "^0.7.2",
+    "react": "15.5.4",
     "react-debounce-input": "^3.0.0",
-    "react-dom": "15.4.2",
+    "react-dom": "15.5.4",
     "react-dropzone": "^3.13.1",
-    "react-helmet": "^3.1.0",
+    "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.1",
     "react-portal-tooltip": "^1.1.5",
-    "react-redux": "^5.0.3",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
     "react-toggle": "^3.0.1",
     "rebass": "^0.2.6",
-    "redux": "^3.5.2",
+    "redux": "^3.6.0",
     "redux-responsive": "^4.1.1",
-    "redux-saga": "^0.10.4",
+    "redux-saga": "^0.15.3",
     "reselect": "^2.5.1",
     "sass-loader": "^3.1.2",
     "selenium-webdriver": "^3.3.0",
@@ -127,7 +128,7 @@
     "transactions-express-rest-mongodb": "latest",
     "transactions-redux-normalizer": "latest",
     "transactions-redux-reselector": "latest",
-    "transactions-redux-saga": "latest",
+    "transactions-redux-request": "latest",
     "url-loader": "0.5.7",
     "url-slug": "^2.0.0",
     "webpack": "^1.13.0",
