--- a/lib/package.json
+++ b/lib/package.json
@@ -2,7 +2,7 @@
   "name": "catapultenv",
   "dependencies": {
     "amdefine": "1.0.0",
-    "autoprefixer": "^6.3.1",
+    "autoprefixer": "^7.1.1",
     "ava": "^0.18.2",
     "aws-sdk": "^2.6.13",
     "babel-cli": "^6.24.1",
@@ -27,7 +27,7 @@
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.28.4",
     "d3": "^4.4.4",
     "draft-js": "^0.10.0",
     "draft-js-alignment-plugin": "beta",
@@ -38,15 +38,13 @@
     "draft-js-plugins-editor": "beta",
     "draft-js-resizeable-plugin": "beta",
     "ejs": "^1.0.0",
-    "entitiex": "latest",
     "es6-promise": "^4.1.0",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "extract-zip": "^1.5.0",
-    "file-loader": "0.8.5",
-    "filtex": "latest",
+    "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "gzip-size": "^3.0.0",
     "helmet": "^3.4.1",
@@ -85,15 +83,15 @@
     "mysql": "^2.13.0",
     "node-env-file": "^0.1.8",
     "node-fetch": "^1.6.3",
-    "node-sass": "^4.1.0",
-    "nodemailer": "^3.1.4",
+    "node-sass": "^4.5.3",
+    "nodemailer": "^4.0.1",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "phantomjs-prebuilt": "^2.1.14",
     "pluralize": "^3.0.0",
-    "postcss-loader": "0.9.1",
+    "postcss-loader": "^2.0.5",
     "prop-types": "^15.5.4",
     "protractor": "^5.1.1",
     "react": "15.5.4",
@@ -113,26 +111,26 @@
     "redux-responsive": "^4.1.1",
     "redux-saga": "^0.15.3",
     "reselect": "^2.5.1",
-    "sass-loader": "^3.1.2",
+    "sass-loader": "^6.0.5",
     "selenium-webdriver": "^3.3.0",
     "shortid": "^2.2.6",
     "smoothscroll-polyfill": "^0.3.4",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
     "standard": "^7.0.1",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.18.2",
     "stylelint": "^7.7.0",
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
     "transactions-express-rest": "latest",
     "transactions-express-rest-mongodb": "latest",
     "transactions-redux-normalizer": "latest",
-    "transactions-redux-reselector": "latest",
     "transactions-redux-request": "latest",
-    "url-loader": "0.5.7",
+    "transactions-redux-reselector": "latest",
+    "url-loader": "^0.5.8",
     "url-slug": "^2.0.0",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5",
     "webpage": "^0.3.0",
     "webshot": "^0.18.0",
     "whatwg-fetch": "^1.0.0",
