--- a/lib/package.json
+++ b/lib/package.json
@@ -7,13 +7,13 @@
     "aws-sdk": "^2.6.13",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.17.2",
     "bower": "^1.8.0",
     "brfs": "1.4.1",
     "chroma-js": "^1.2.1",
@@ -27,7 +27,9 @@
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
+    "cron": "^1.2.1",
     "css-loader": "^0.28.4",
+    "csv-parse": "^1.2.0",
     "d3": "^4.4.4",
     "draft-js": "^0.10.0",
     "draft-js-alignment-plugin": "beta",
@@ -54,7 +56,8 @@
     "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.1",
     "jest": "18.1.0",
-    "jsdom": "^9.12.0",
+    "js-beautify": "^1.6.14",
+    "jsdom": "^11.0.0",
     "json-loader": "0.5.4",
     "json-stable-stringify": "^1.0.1",
     "jsonwebtoken": "^7.1.9",
@@ -65,6 +68,7 @@
     "lodash.get": "^4.4.2",
     "lodash.includes": "^4.3.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.kebabcase": "^4.1.1",
     "lodash.keyby": "^4.6.0",
     "lodash.merge": "^4.6.0",
     "lodash.mergewith": "^4.6.0",
@@ -81,6 +85,7 @@
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
+    "node-csv": "^0.1.2",
     "node-env-file": "^0.1.8",
     "node-fetch": "^1.6.3",
     "node-sass": "^4.5.3",
@@ -122,6 +127,7 @@
     "stylelint": "^7.7.0",
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
+    "time": "^0.12.0",
     "transactions-express-rest": "latest",
     "transactions-express-rest-mongodb": "latest",
     "transactions-redux-normalizer": "latest",
