--- a/lib/package.json
+++ b/lib/package.json
@@ -36,6 +36,7 @@
     "draft-js-drag-n-drop-plugin": "beta",
     "draft-js-focus-plugin": "beta",
     "draft-js-image-plugin": "beta",
+    "draft-js-import-html": "^0.3.2",
     "draft-js-mathjax-plugin": "^1.3.4",
     "draft-js-plugins-editor": "beta",
     "draft-js-resizeable-plugin": "beta",
@@ -62,6 +63,7 @@
     "json-stable-stringify": "^1.0.1",
     "jsonwebtoken": "^7.1.9",
     "less": "2.7.1",
+    "loader-utils": "^1.1.0",
     "lodash": "^4.17.4",
     "lodash.assign": "^4.2.0",
     "lodash.flatten": "^4.4.0",
@@ -128,6 +130,7 @@
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
     "time": "^0.12.0",
+    "transactions-express-passport": "latest",
     "transactions-express-rest": "latest",
     "transactions-express-rest-mongodb": "latest",
     "transactions-redux-normalizer": "latest",
