--- a/lib/package.json
+++ b/lib/package.json
@@ -130,16 +130,21 @@
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
     "time": "^0.12.0",
+    "transactions-express-aws": "latest",
+    "transactions-express-logger": "latest",
     "transactions-express-passport": "latest",
     "transactions-express-rest": "latest",
     "transactions-express-rest-mongodb": "latest",
+    "transactions-express-socketio": "latest",
+    "transactions-interface-state": "latest",
+    "transactions-interface-web": "latest",
     "transactions-redux-normalizer": "latest",
     "transactions-redux-request": "latest",
     "transactions-redux-reselector": "latest",
     "url-loader": "^0.5.8",
     "url-slug": "^2.0.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "2.4.2",
     "webpage": "^0.3.0",
     "webshot": "^0.18.0",
     "whatwg-fetch": "^1.0.0",
