--- a/lib/package.json
+++ b/lib/package.json
@@ -119,6 +119,7 @@
     "redux-saga": "^0.15.3",
     "reselect": "^2.5.1",
     "sass-loader": "^6.0.5",
+    "@epegzz/sass-vars-loader": "^2.0.2",
     "selenium-webdriver": "^3.3.0",
     "shortid": "^2.2.6",
     "smoothscroll-polyfill": "^0.3.4",
@@ -130,7 +131,10 @@
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
     "time": "^0.12.0",
+    "transactions-d3-graph": "latest",
+    "transactions-draft-editor": "latest",
     "transactions-express-aws": "latest",
+    "transactions-express-data": "latest",
     "transactions-express-logger": "latest",
     "transactions-express-passport": "latest",
     "transactions-express-rest": "latest",
@@ -141,6 +145,8 @@
     "transactions-redux-normalizer": "latest",
     "transactions-redux-request": "latest",
     "transactions-redux-reselector": "latest",
+    "transactions-tests": "latest",
+    "transactions-tooltip-help": "latest",
     "url-loader": "^0.5.8",
     "url-slug": "^2.0.0",
     "webpack": "^3.3.0",
