--- a/lib/package.json
+++ b/lib/package.json
@@ -6,8 +6,8 @@
     "ava": "^0.18.2",
     "aws-sdk": "^2.6.13",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -101,9 +101,9 @@
     "postcss-loader": "^2.0.5",
     "prop-types": "^15.5.4",
     "protractor": "^5.1.1",
-    "react": "15.5.4",
+    "react": "^15.5.4",
     "react-debounce-input": "^3.0.0",
-    "react-dom": "15.5.4",
+    "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.1",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.1",
@@ -119,7 +119,7 @@
     "redux-saga": "^0.15.3",
     "reselect": "^2.5.1",
     "sass-loader": "^6.0.5",
-    "@epegzz/sass-vars-loader": "^2.0.2",
+    "sass-vars-loader": "epegzz/sass-vars-loader#15f10250ed7cce0d24dc2622795e19607f5e173a",
     "selenium-webdriver": "^3.3.0",
     "shortid": "^2.2.6",
     "smoothscroll-polyfill": "^0.3.4",
@@ -131,6 +131,10 @@
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
     "time": "^0.12.0",
+    "transactions-authorization-state": "latest",
+    "transactions-authorization-web": "latest",
+    "transactions-cms-state": "latest",
+    "transactions-cms-web": "latest",
     "transactions-d3-graph": "latest",
     "transactions-draft-editor": "latest",
     "transactions-express-aws": "latest",
@@ -146,7 +150,9 @@
     "transactions-redux-request": "latest",
     "transactions-redux-reselector": "latest",
     "transactions-tests": "latest",
-    "transactions-tooltip-help": "latest",
+    "transactions-tooltip-web": "latest",
+    "transactions-user-state": "latest",
+    "transactions-user-web": "latest",
     "url-loader": "^0.5.8",
     "url-slug": "^2.0.0",
     "webpack": "^3.3.0",
@@ -158,5 +164,10 @@
     "winston-logstash": "^0.3.0"
   },
   "license": "MIT",
+  "scripts": {
+    "link": "ctp -l",
+    "resolve-dependencies": "rm -rf node_modules/css-loader/node_modules/loader-utils && rm -rf node_modules/sass-loader/node_modules/loader-utils && rm -rf node_modules/file-loader/node_modules/loader-utils && rm -rf node_modules/url-loader/node_modules/loader-utils",
+    "postinstall": "npm run link && npm run resolve-dependencies"
+  },
   "version": "0.0.1"
 }
