replace symlink by package name instead of folder name

--- a/lib/package.json
+++ b/lib/package.json
@@ -68,6 +68,7 @@
     "lodash.assign": "^4.2.0",
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.2",
+    "lodash.groupby": "^4.6.0",
     "lodash.includes": "^4.3.0",
     "lodash.isequal": "^4.5.0",
     "lodash.kebabcase": "^4.1.1",
@@ -88,6 +89,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "node-csv": "^0.1.2",
+    "node-dir": "^0.1.17",
     "node-env-file": "^0.1.8",
     "node-fetch": "^1.6.3",
     "node-sass": "^4.5.3",
@@ -112,6 +114,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
+    "react-slick": "^0.14.11",
     "react-toggle": "^3.0.1",
     "rebass": "^0.2.6",
     "redux": "^3.6.0",
@@ -131,6 +134,12 @@
     "stylelint-config-standard": "^11.0.0",
     "svg-sprite": "^1.3.6",
     "time": "^0.12.0",
+    "teleport-express-webrouter-rc": "latest",
+		"teleport-heroku-rc": "latest",
+		"teleport-react-router": "latest",
+		"teleport-transactions-backend": "latest",
+		"teleport-transactions-frontend": "latest",
+		"teleport-webpack-react-rc": "latest",
     "transactions-authorization-state": "latest",
     "transactions-authorization-web": "latest",
     "transactions-cms-state": "latest",
@@ -168,7 +177,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "link": "ctp -l -a",
+    "link": "ctp -l -r && ctp -l -a",
     "resolve-dependencies": "rm -rf node_modules/css-loader/node_modules/loader-utils && rm -rf node_modules/sass-loader/node_modules/loader-utils && rm -rf node_modules/postcss-loader/node_modules/loader-utils && rm -rf node_modules/file-loader/node_modules/loader-utils && rm -rf node_modules/url-loader/node_modules/loader-utils",
     "postinstall": "npm run link && npm run resolve-dependencies"
   },
