--- a/lib/package.json
+++ b/lib/package.json
@@ -45,9 +45,10 @@
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "extract-zip": "^1.5.0",
     "file-loader": "^0.11.2",
+    "grab-dans-tes-mains": "latest",
     "gulp": "^3.9.1",
     "gzip-size": "^3.0.0",
     "helmet": "^3.4.1",
@@ -58,7 +59,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "18.1.0",
     "js-beautify": "^1.6.14",
-    "jsdom": "^11.0.0",
+    "jsdom": "^11.2.0",
     "json-loader": "0.5.4",
     "json-stable-stringify": "^1.0.1",
     "jsonwebtoken": "^7.1.9",
@@ -128,6 +129,7 @@
     "smoothscroll-polyfill": "^0.3.4",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
+    "scrap-dans-tes-mains": "latest",
     "standard": "^7.0.1",
     "style-loader": "^0.18.2",
     "stylelint": "^7.7.0",
