--- a/lib/package.json
+++ b/lib/package.json
@@ -39,6 +39,7 @@
     "draft-js-import-html": "^0.3.2",
     "draft-js-mathjax-plugin": "^1.3.4",
     "draft-js-plugins-editor": "beta",
+    "draft-js-prism": "^1.0.3",
     "draft-js-resizeable-plugin": "beta",
     "ejs": "^1.0.0",
     "es6-promise": "^4.1.0",
@@ -105,11 +106,13 @@
     "prop-types": "^15.5.4",
     "protractor": "^5.1.1",
     "react": "^15.5.4",
+    "react-addons-shallow-compare": "^15.6.0",
     "react-debounce-input": "^3.0.0",
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.13.1",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.1",
+    "react-inview-monitor": "^1.1.1",
     "react-portal-tooltip": "^1.1.5",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
@@ -139,6 +142,7 @@
     "teleport-express-webrouter-rc": "latest",
 		"teleport-heroku-rc": "latest",
 		"teleport-react-router": "latest",
+    "teleport-redux-saga": "latest",
 		"teleport-transactions-backend": "latest",
 		"teleport-transactions-frontend": "latest",
 		"teleport-webpack-react-rc": "latest",
@@ -163,6 +167,7 @@
     "transactions-redux-request": "latest",
     "transactions-redux-reselector": "latest",
     "transactions-tests": "latest",
+    "transactions-tooltip-state": "latest",
     "transactions-tooltip-web": "latest",
     "transactions-user-state": "latest",
     "transactions-user-web": "latest",
