--- a/lib/package.json
+++ b/lib/package.json
@@ -9,9 +9,11 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
     "bower": "^1.8.0",
@@ -68,6 +70,8 @@
     "loader-utils": "^1.1.0",
     "lodash": "^4.17.4",
     "lodash.assign": "^4.2.0",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.2",
     "lodash.groupby": "^4.6.0",
@@ -144,14 +148,18 @@
 		"teleport-react-router": "latest",
     "teleport-redux-saga": "latest",
 		"teleport-transactions-backend": "latest",
+    "teleport-transactions-data": "latest",
 		"teleport-transactions-frontend": "latest",
 		"teleport-webpack-react-rc": "latest",
+    "testcafe": "0.17.2",
     "transactions-authorization-state": "latest",
     "transactions-authorization-web": "latest",
     "transactions-cms-state": "latest",
     "transactions-cms-web": "latest",
     "transactions-d3-graph": "latest",
     "transactions-draft-editor": "latest",
+    "transactions-demos-todos": "latest",
+    "transactions-description-definition": "latest",
     "transactions-express-aws": "latest",
     "transactions-express-data": "latest",
     "transactions-express-logger": "latest",
@@ -163,7 +171,9 @@
     "transactions-interface-web": "latest",
     "transactions-media-state": "latest",
     "transactions-media-web": "latest",
+    "transactions-query-encode": "latest",
     "transactions-redux-normalizer": "latest",
+    "transactions-redux-package": "latest",
     "transactions-redux-request": "latest",
     "transactions-redux-reselector": "latest",
     "transactions-tests": "latest",
