--- a/lib/package.json
+++ b/lib/package.json
@@ -83,12 +83,14 @@
     "lodash.mergewith": "^4.6.0",
     "lodash.range": "^3.2.0",
     "lodash.sample": "^4.2.1",
+    "lodash.set": "^4.3.2",
     "lodash.startcase": "^4.4.0",
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "lodash.values": "^4.3.0",
     "mime-types": "^2.1.15",
     "mkdirp": "^0.5.1",
+    "moment": "^2.19.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.1.9",
     "morgan": "^1.8.1",
