--- a/lib/package.json
+++ b/lib/package.json
@@ -62,6 +62,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "18.1.0",
     "js-beautify": "^1.6.14",
+    "js-combinatorics": "^0.5.2",
     "jsdom": "^11.2.0",
     "json-loader": "0.5.4",
     "json-stable-stringify": "^1.0.1",
@@ -123,7 +124,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "next",
+    "react-router-redux": "5.0.0-alpha.4",
     "react-slick": "^0.14.11",
     "react-toggle": "^3.0.1",
     "rebass": "^0.2.6",
@@ -163,6 +164,7 @@
     "transactions-demos-todos": "latest",
     "transactions-description-definition": "latest",
     "transactions-express-aws": "latest",
+    "transactions-express-conditions": "latest",
     "transactions-express-data": "latest",
     "transactions-express-logger": "latest",
     "transactions-express-passport": "latest",
