--- a/lib/package.json
+++ b/lib/package.json
@@ -45,11 +45,13 @@
     "draft-js-resizeable-plugin": "beta",
     "ejs": "^1.0.0",
     "es6-promise": "^4.1.0",
+    "expo": "^21.0.0",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "extract-zip": "^1.5.0",
+    "fetch-everywhere": "^1.0.5",
     "file-loader": "^0.11.2",
     "grab-dans-tes-mains": "latest",
     "gulp": "^3.9.1",
@@ -59,7 +61,6 @@
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "imports-loader": "^0.6.5",
-    "isomorphic-fetch": "^2.2.1",
     "jest": "18.1.0",
     "js-beautify": "^1.6.14",
     "js-combinatorics": "^0.5.2",
@@ -112,14 +113,16 @@
     "postcss-loader": "^2.0.5",
     "prop-types": "^15.5.4",
     "protractor": "^5.1.1",
-    "react": "^15.5.4",
+    "react": "^16.0.0",
     "react-addons-shallow-compare": "^15.6.0",
     "react-debounce-input": "^3.0.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^16.0.0",
     "react-dropzone": "^3.13.1",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.1",
     "react-inview-monitor": "^1.1.1",
+    "react-native": "^0.48.4",
+    "react-native-scripts": "1.5.0",
     "react-portal-tooltip": "^1.1.5",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
