removed reselector package

--- a/lib/package.json
+++ b/lib/package.json
@@ -123,12 +123,14 @@
     "react-inview-monitor": "^1.1.1",
     "react-native": "^0.48.4",
     "react-native-scripts": "1.5.0",
-    "react-portal-tooltip": "^1.1.5",
+    "react-portal": "^4.0.0",
+    "react-portal-tooltip": "^2.1.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-native": "^4.2.0",
     "react-router-redux": "5.0.0-alpha.4",
-    "react-slick": "^0.14.11",
+    "react-slick": "^0.15.4",
     "react-toggle": "^3.0.1",
     "rebass": "^0.2.6",
     "redux": "^3.6.0",
@@ -158,6 +160,7 @@
 		"teleport-transactions-frontend": "latest",
 		"teleport-webpack-react-rc": "latest",
     "testcafe": "0.17.2",
+    "transactions-authorization-mobile": "latest",
     "transactions-authorization-state": "latest",
     "transactions-authorization-web": "latest",
     "transactions-cms-state": "latest",
@@ -174,18 +177,22 @@
     "transactions-express-rest": "latest",
     "transactions-express-rest-mongodb": "latest",
     "transactions-express-socketio": "latest",
+    "transactions-interface-mobile": "latest",
     "transactions-interface-state": "latest",
     "transactions-interface-web": "latest",
+    "transactions-media-mobile": "latest",
     "transactions-media-state": "latest",
     "transactions-media-web": "latest",
-    "transactions-query-encode": "latest",
     "transactions-redux-normalizer": "latest",
     "transactions-redux-package": "latest",
+    "transactions-redux-query": "latest",
+    "transactions-redux-react": "latest",
     "transactions-redux-request": "latest",
-    "transactions-redux-reselector": "latest",
     "transactions-tests": "latest",
+    "transactions-tools-isomorphic": "latest",
     "transactions-tooltip-state": "latest",
     "transactions-tooltip-web": "latest",
+    "transactions-user-mobile": "latest",
     "transactions-user-state": "latest",
     "transactions-user-web": "latest",
     "url-loader": "^0.5.8",
