--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -1,6 +1,7 @@
 apscheduler==3.3.1
 arrow==0.6.0
 awscli==1.11.45
+beautifulsoup4==4.6.0
 boto==2.41.0
 boto3==1.4.1
 bson==0.4.3
@@ -12,7 +13,7 @@ Flask-Login==0.2.11
 Flask-Principal==0.4.0
 Flask-Script==2.0.5
 Flask-Security==1.7.3
-flask-socketio==2.8.2
+flask-socketio==2.1
 flask_graphql==1.4.0
 Flask-WTF==0.10.0
 google-api-python-client==1.1
@@ -24,17 +25,22 @@ inflect==0.2.5
 inlinestyler==0.2.1
 itsdangerous==0.24
 Jinja2==2.8
+lxml==3.3.5
 matplotlib==1.5.3
 networkx==1.11
+newspaper==0.1.0.7
 nltk==3.2.3
 progressbar==2.3
+Pillow==2.5.1
 PyYAML==3.12
 pymongo==3.3.0
 pytz==2015.7
-requests==2.11.1
+requests==2.6.0
 rethinkdb==2.3.0.post6
 scikit-learn==0.18
+scholarly===0.2.3
 seaborn==0.7.1
+six==1.11.0
 uwsgi==2.0.14
 WTForms==1.0.5
 Werkzeug==0.11.11
