--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -18,6 +18,7 @@ flask-socketio==2.1
 flask_sqlalchemy==2.3.2
 flask_graphql==1.4.0
 Flask-WTF==0.10.0
+hypothesis==3.45
 google-api-python-client==1.1
 gql==0.1.0
 graphene==1.1.3
@@ -33,12 +34,15 @@ matplotlib==1.5.3
 networkx==1.11
 newspaper==0.1.0.7
 nltk==3.2.3
+pathlib==1.0.1
 pandas==0.22.0
 progressbar==2.3
 Pillow==2.5.1
 psycopg2
+pylint==1.8.2
 PyYAML==3.12
 pymongo==3.3.0
+pytest==3.4.0
 pytz==2015.7
 requests==2.6.0
 rethinkdb==2.3.0.post6
